# HyperBrowse

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: BundleCudaRedistributables.cmake  HyperBrowseBuildInfo.h.in  HyperBrowseInstaller.iss.in  HyperBrowseVersion.rc.in  PortableREADME.txt.in  RuntimeDependencies.txt.in
specs/: 01-product-spec.md  02-architecture.md  03-performance-strategy.md  04-ui-behavior.md  05-benchmarking-plan.md  06-implementation-phases.md  07-copilot-prompt-sequence.md  08-issues-to-resolve.md  09-hardening-pass.md  10-prioritized-enhancements.md  11-file-management-workflow.md  12-visual-polish-pass.md  13-branding-and-ui-assessment.md  14-todo.md  15-d2d-rendering-migration.md  16-toolbar-ux-redesign.md  README.md
src/app/: Application.cpp  Application.h  WinMain.cpp  resource.h
src/browser/: BrowserModel.cpp  BrowserModel.h  BrowserPane.cpp  BrowserPane.h
src/cache/: DiskThumbnailCache.cpp  DiskThumbnailCache.h  ThumbnailCache.cpp  ThumbnailCache.h
src/decode/: ImageDecoder.cpp  ImageDecoder.h  NvJpegDecoder.cpp  NvJpegDecoder.h  RawHelperProtocol.cpp  RawHelperProtocol.h  WicDecodeHelpers.h  WicThumbnailDecoder.cpp  WicThumbnailDecoder.h
src/render/: D2DRenderer.cpp  D2DRenderer.h
src/services/: BatchConvertService.cpp  BatchConvertService.h  FileOperationService.cpp  FileOperationService.h  FolderEnumerationService.cpp  FolderEnumerationService.h  FolderTreeEnumerationService.cpp  FolderTreeEnumerationService.h  FolderWatchService.cpp  FolderWatchService.h  ImageMetadataService.cpp  ImageMetadataService.h  JpegTransformService.cpp  JpegTransformService.h  ThumbnailScheduler.cpp  ThumbnailScheduler.h  UserMetadataStore.cpp  UserMetadataStore.h
src/tools/: RawHelperMain.cpp
src/ui/: DiagnosticsWindow.cpp  DiagnosticsWindow.h  MainWindow.cpp  MainWindow.h  ToolbarIconLibrary.cpp  ToolbarIconLibrary.h
src/util/: BackgroundExecutor.h  Diagnostics.cpp  Diagnostics.h  HashUtils.h  Log.cpp  Log.h  PathUtils.h  ResourcePng.h  ResourceSizing.h  StringConvert.h  Timing.h
src/viewer/: ViewerWindow.cpp  ViewerWindow.h
tests/: CMakeLists.txt  smoke.cpp
tests/fixtures/raw/: README.md
tools/: PackageRelease.ps1  TestStartupBenchmark.ps1  generate_icon.py
